--- a/nbaAPI_EDA.ipynb
+++ b/nbaAPI_EDA.ipynb
@@ -17,45 +17,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already up-to-date: pip in /Users/brianlouie/anaconda3/lib/python3.6/site-packages (19.1.1)\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install --upgrade pip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: nba_api in /Users/brianlouie/anaconda3/lib/python3.6/site-packages (1.0.7)\n",
-      "Requirement already satisfied: requests in /Users/brianlouie/anaconda3/lib/python3.6/site-packages (from nba_api) (2.18.4)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/brianlouie/anaconda3/lib/python3.6/site-packages (from requests->nba_api) (3.0.4)\n",
-      "Requirement already satisfied: idna<2.7,>=2.5 in /Users/brianlouie/anaconda3/lib/python3.6/site-packages (from requests->nba_api) (2.6)\n",
-      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /Users/brianlouie/anaconda3/lib/python3.6/site-packages (from requests->nba_api) (1.22)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/brianlouie/anaconda3/lib/python3.6/site-packages (from requests->nba_api) (2018.8.13)\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install nba_api"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [],
    "source": [
     "from nba_api.stats.endpoints import commonplayerinfo\n",
@@ -66,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +39,7 @@
        " 'last_name': 'Harden'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,26 +86,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2546"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Melo_frm_redhook[\"id\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +178,7 @@
        "[1 rows x 30 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,109 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    18.000000\n",
-       "mean      0.445889\n",
-       "std       0.023544\n",
-       "min       0.404000\n",
-       "25%       0.431500\n",
-       "50%       0.446500\n",
-       "75%       0.457250\n",
-       "max       0.492000\n",
-       "Name: FG_PCT, dtype: float64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "avg_FG = melo_career.describe()['FG_PCT']\n",
-    "avg_FG"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[2546, '2003-04', 1610612743, 'DEN', 20.0, 82, 82, 2994.0, 624,\n",
-       "        1465, 0.426, 69, 214, 0.322, 408, 525, 0.777, 183, 315, 498, 227,\n",
-       "        97, 41, 247, 225, 1725],\n",
-       "       [2546, '2004-05', 1610612743, 'DEN', 21.0, 75, 75, 2608.0, 530,\n",
-       "        1230, 0.431, 42, 158, 0.266, 456, 573, 0.796, 141, 285, 426, 194,\n",
-       "        68, 30, 224, 229, 1558],\n",
-       "       [2546, '2005-06', 1610612743, 'DEN', 22.0, 80, 80, 2941.0, 756,\n",
-       "        1572, 0.481, 37, 152, 0.243, 573, 709, 0.808, 122, 272, 394, 216,\n",
-       "        88, 42, 218, 229, 2122],\n",
-       "       [2546, '2006-07', 1610612743, 'DEN', 23.0, 65, 65, 2486.0, 691,\n",
-       "        1453, 0.476, 40, 149, 0.268, 459, 568, 0.808, 143, 248, 391, 249,\n",
-       "        77, 23, 234, 203, 1881],\n",
-       "       [2546, '2007-08', 1610612743, 'DEN', 24.0, 77, 77, 2806.0, 728,\n",
-       "        1481, 0.492, 58, 164, 0.354, 464, 590, 0.786, 178, 393, 571, 259,\n",
-       "        98, 39, 253, 253, 1978],\n",
-       "       [2546, '2008-09', 1610612743, 'DEN', 25.0, 66, 66, 2277.0, 535,\n",
-       "        1207, 0.443, 63, 170, 0.371, 371, 468, 0.793, 106, 344, 450, 222,\n",
-       "        75, 24, 199, 195, 1504],\n",
-       "       [2546, '2009-10', 1610612743, 'DEN', 26.0, 69, 69, 2634.0, 688,\n",
-       "        1502, 0.458, 59, 187, 0.316, 508, 612, 0.83, 152, 302, 454, 222,\n",
-       "        88, 30, 209, 225, 1943],\n",
-       "       [2546, '2010-11', 1610612743, 'DEN', 27.0, 50, 50, 1774.0, 437,\n",
-       "        967, 0.452, 42, 126, 0.333, 343, 417, 0.823, 77, 305, 382, 140,\n",
-       "        43, 31, 142, 134, 1259],\n",
-       "       [2546, '2010-11', 1610612752, 'NYK', 27.0, 27, 27, 977.0, 247,\n",
-       "        536, 0.461, 53, 125, 0.424, 164, 188, 0.872, 41, 140, 181, 81,\n",
-       "        25, 15, 64, 90, 711],\n",
-       "       [2546, '2010-11', 0, 'TOT', 27.0, 77, 77, 2751.0, 684, 1503,\n",
-       "        0.455, 95, 251, 0.378, 507, 605, 0.838, 118, 445, 563, 221, 68,\n",
-       "        46, 206, 224, 1970],\n",
-       "       [2546, '2011-12', 1610612752, 'NYK', 28.0, 55, 55, 1876.0, 441,\n",
-       "        1025, 0.43, 68, 203, 0.335, 295, 367, 0.804, 88, 256, 344, 200,\n",
-       "        62, 24, 144, 156, 1245],\n",
-       "       [2546, '2012-13', 1610612752, 'NYK', 29.0, 67, 67, 2482.0, 669,\n",
-       "        1489, 0.449, 157, 414, 0.379, 425, 512, 0.83, 134, 326, 460, 171,\n",
-       "        52, 32, 175, 205, 1920],\n",
-       "       [2546, '2013-14', 1610612752, 'NYK', 30.0, 77, 77, 2982.0, 743,\n",
-       "        1643, 0.452, 167, 415, 0.402, 459, 541, 0.848, 145, 477, 622,\n",
-       "        242, 95, 51, 198, 224, 2112],\n",
-       "       [2546, '2014-15', 1610612752, 'NYK', 31.0, 40, 40, 1428.0, 358,\n",
-       "        806, 0.444, 61, 179, 0.341, 189, 237, 0.797, 72, 192, 264, 122,\n",
-       "        40, 17, 89, 87, 966],\n",
-       "       [2546, '2015-16', 1610612752, 'NYK', 32.0, 72, 72, 2530.0, 567,\n",
-       "        1307, 0.434, 105, 310, 0.339, 334, 403, 0.829, 98, 458, 556, 299,\n",
-       "        62, 38, 176, 180, 1573],\n",
-       "       [2546, '2016-17', 1610612752, 'NYK', 33.0, 74, 74, 2538.0, 602,\n",
-       "        1389, 0.433, 151, 421, 0.359, 304, 365, 0.833, 62, 376, 438, 213,\n",
-       "        60, 34, 153, 198, 1659],\n",
-       "       [2546, '2017-18', 1610612760, 'OKC', 34.0, 78, 78, 2501.0, 472,\n",
-       "        1168, 0.404, 169, 474, 0.357, 148, 193, 0.767, 67, 386, 453, 103,\n",
-       "        47, 49, 99, 197, 1261],\n",
-       "       [2546, '2018-19', 1610612745, 'HOU', 34.0, 10, 2, 294.0, 49, 121,\n",
-       "        0.405, 21, 64, 0.328, 15, 22, 0.682, 9, 45, 54, 5, 4, 7, 8, 32,\n",
-       "        134]], dtype=object)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "melo_career.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +428,7 @@
        "[6 rows x 26 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +439,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    18.000000\n",
+       "mean      0.445889\n",
+       "std       0.023544\n",
+       "min       0.404000\n",
+       "25%       0.431500\n",
+       "50%       0.446500\n",
+       "75%       0.457250\n",
+       "max       0.492000\n",
+       "Name: FG_PCT, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_FG = melo_career.describe()['FG_PCT']\n",
+    "avg_FG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +477,7 @@
        "Text(0.5,0,'Years in the NBA')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -637,7 +505,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GROUP_SET</th>\n",
+       "      <th>GROUP_VALUE</th>\n",
+       "      <th>GP</th>\n",
+       "      <th>W</th>\n",
+       "      <th>L</th>\n",
+       "      <th>W_PCT</th>\n",
+       "      <th>MIN</th>\n",
+       "      <th>FGM</th>\n",
+       "      <th>FGA</th>\n",
+       "      <th>FG_PCT</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BLKA_RANK</th>\n",
+       "      <th>PF_RANK</th>\n",
+       "      <th>PFD_RANK</th>\n",
+       "      <th>PTS_RANK</th>\n",
+       "      <th>PLUS_MINUS_RANK</th>\n",
+       "      <th>NBA_FANTASY_PTS_RANK</th>\n",
+       "      <th>DD2_RANK</th>\n",
+       "      <th>TD3_RANK</th>\n",
+       "      <th>CFID</th>\n",
+       "      <th>CFPARAMS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Overall</td>\n",
+       "      <td>2016-17</td>\n",
+       "      <td>74</td>\n",
+       "      <td>29</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0.392</td>\n",
+       "      <td>2538.08</td>\n",
+       "      <td>602</td>\n",
+       "      <td>1389</td>\n",
+       "      <td>0.433</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2016-17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 62 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  GROUP_SET GROUP_VALUE  GP   W   L  W_PCT      MIN  FGM   FGA  FG_PCT  \\\n",
+       "0   Overall     2016-17  74  29  45  0.392  2538.08  602  1389   0.433   \n",
+       "\n",
+       "     ...     BLKA_RANK  PF_RANK  PFD_RANK  PTS_RANK  PLUS_MINUS_RANK  \\\n",
+       "0    ...             1        1         1         1                1   \n",
+       "\n",
+       "   NBA_FANTASY_PTS_RANK  DD2_RANK  TD3_RANK  CFID  CFPARAMS  \n",
+       "0                     1         1         1    11   2016-17  \n",
+       "\n",
+       "[1 rows x 62 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nba_api.stats.endpoints import playerdashboardbyclutch \n",
+    "\n",
+    "clutch = playerdashboardbyclutch.PlayerDashboardByClutch(player_id='2546',season='2016-17')\n",
+    "clutch.overall_player_dashboard.get_data_frame()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +820,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
