Update RJ Barrett FG analysis.ipynb

--- a/RJ Barrett FG analysis.ipynb
+++ b/RJ Barrett FG analysis.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Does RJ Barrett have 🪣 potential ?\n",
+    "# Does RJ Barrett have potential ?\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
