--- a/RJ Barrett FG analysis.ipynb
+++ b/RJ Barrett FG analysis.ipynb
@@ -35,17 +35,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "\n",
-    "<h3> Was RJ's sophmore year shooting improvement exaggerated or legitimate? </h3>\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -769,6 +758,7 @@
     "</p>   \n",
     "<li>Both test are based on same underlying principle, each compares the values in the sample with the distribution of values expected for a normal distribution. For Shapiro-Wilks a test statistic value of 1 represents perfect normality</li>\n",
     "</ul>\n",
+    "    \n",
     "</div>"
    ]
   },
@@ -855,7 +845,8 @@
     "<li>The near straight line observed in the <code>Q-Q plot</code> and Shapiro Wilks test statistic(s) close to 1.0 confirm that both seasons follow almost exactly normal distribution </li>\n",
     "<p>\n",
     "</p>\n",
-    "<li> With a clear understanding of FG% distribution of each season we can be confident a two sample t-test is best suited to evaluate difference in mean between two seasons </li>\n"
+    "<li> With a clear understanding of FG% distribution of each season we can be confident a two sample t-test is best suited to evaluate difference in mean between two seasons </li>\n",
+    "</div>"
    ]
   },
   {
@@ -898,7 +889,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conducting two sample T-test\n",
+    "### Conducting two sample T-test\n",
     "\n",
     "- Our null hypothesis ${ H_o }$ in our two sample t-test is the means of FG% from season 1 and season 2 for RJ are identical, ${\\mu_{FG rookie}=\\mu_{FG sophmore}}$ and that the observed difference in means was produced by random chance. \n",
     "\n",
@@ -956,9 +947,7 @@
    "source": [
     "<h3> But wait a second, P-value is not the final word </h3>\n",
     "\n",
-    "This was a disappointing end to our analysis or at least it would've been until Rowan Barrett Jr., Duke University scholar, reminded me there is a key componenet to interpreting statistical test resuts that was overlooked - <b>the statistical Power of our two sample t-test</b>.\n",
-    "\n",
-    "</ul>\n"
+    "This was a disappointing end to our analysis or at least it would've been until Rowan Barrett Jr., Duke University scholar, reminded me there is a key componenet to interpreting statistical test resuts that was overlooked - <b>the statistical Power of our two sample t-test</b>.\n"
    ]
   },
   {
@@ -1098,7 +1087,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2> Low statistical Power can lead to False Negatives </h2>\n",
+    "<h2> How could we doubt RJ? </h2>\n",
+    "<h3> Low Statistical power --> False Negatives </h3>\n",
     "<ul>\n",
     "    <li> The minimal, detactable effect size based on existing parameters was <b>0.572</b>, which is <i>higher than</i> the actual effect size of our mean comparison, <b>0.323</b></li>\n",
     "<p>\n",
